k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: smartreview-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 586337033275.dkr.ecr.ap-south-1.amazonaws.com/smartreview-dev/frontend:latest
          ports:
            - containerPort: 80
